--- a/UPM/Pages/RequestPage.xaml
+++ b/UPM/Pages/RequestPage.xaml
@@ -9,15 +9,18 @@
       Title="Request">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
-            <RowDefinition Height="100"/>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="3*"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
+        <GroupBox Header="Поиск пользователя">
+            <StackPanel>
+                <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
+            
             <StackPanel Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <TextBlock Text="Номер телефона" Margin="10"/>
                 <TextBox x:Name="tbPhone" PreviewTextInput="tbPhone_PreviewTextInput" TextChanged="tbPhone_TextChanged"/>
@@ -26,8 +29,12 @@
                 <TextBlock Text="Фамилия абонента" Margin="10"/>
                 <TextBox x:Name="tbSurname" TextChanged="tbSurname_TextChanged"/>
             </StackPanel>
+                
+            
         </Grid>
-        <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+            </StackPanel>
+    </GroupBox>
+    <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBlock Text="Пользователь: "/>
             <ComboBox Name="cmbSubscriber" MinWidth="400"/>
         </StackPanel>
