--- a/UPM/Windowses/AddRequest.xaml
+++ b/UPM/Windowses/AddRequest.xaml
@@ -8,81 +8,97 @@
         Title="ООО «Телеком Нева Связь»" Height="700" Width="1000" MinHeight="700" MinWidth="1000">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
-            <RowDefinition/>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <TextBlock Name="tbHeader" Text="Создание заявки" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <StackPanel Grid.Row="1" Margin="10">
-            <TextBlock x:Name="tbNomer" Text="Номер заявки: "/>
-            <Grid Margin="0, 5, 0, 5">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <StackPanel Orientation="Vertical" Grid.Column="0" HorizontalAlignment="Center">
+        <TextBlock Grid.Row="0" Name="tbHeader" Text="Создание заявки" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Bottom" x:Name="tbNomer" Text="Номер заявки: "/>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                </Grid.RowDefinitions>
+                <StackPanel Orientation="Vertical" Grid.Row="0" HorizontalAlignment="Center">
                     <TextBlock Text="Дата создания" HorizontalAlignment="Center"/>
                     <TextBlock x:Name="dateOfCreation" Text="" MinWidth="200"/>
                 </StackPanel>
-                <StackPanel Orientation="Vertical" Grid.Column="1" HorizontalAlignment="Center">
+                <StackPanel Orientation="Vertical" Grid.Row="1" HorizontalAlignment="Center">
                     <TextBlock Text="Номер абонента" HorizontalAlignment="Center"/>
                     <TextBlock x:Name="tbPhone" MinWidth="200"/>
                 </StackPanel>
-                <StackPanel Orientation="Vertical" Grid.Column="2" HorizontalAlignment="Center">
+                
+                <StackPanel Orientation="Vertical" Grid.Row="2" HorizontalAlignment="Center">
                     <TextBlock Text="Лицевой счёт" HorizontalAlignment="Center"/>
                     <TextBlock x:Name="tbPersonalAccount" MinWidth="200"/>
                 </StackPanel>
-            </Grid>
-            <Grid Margin="0, 5, 0, 5">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <StackPanel Orientation="Vertical" Grid.Column="0" HorizontalAlignment="Center">
-                    <TextBlock Text="Услуга" HorizontalAlignment="Center"/>
-                    <ComboBox x:Name="cmbService" MinWidth="300" MaxWidth="300"/>
-                </StackPanel>
-                <StackPanel Orientation="Vertical" Grid.Column="1" HorizontalAlignment="Center">
-                    <TextBlock Text="Вид услуги" HorizontalAlignment="Center"/>
-                    <ComboBox x:Name="cmbTypeOfService" MinWidth="300" SelectionChanged="cmbTypeOfService_SelectionChanged" MaxWidth="300"/>
-                </StackPanel>
-                <StackPanel Orientation="Vertical" Grid.Column="2" HorizontalAlignment="Center">
-                    <TextBlock Text="Тип услуги" HorizontalAlignment="Center"/>
-                    <ComboBox x:Name="cmbServiceType" MinWidth="300" MaxWidth="300"/>
-                </StackPanel>
-            </Grid>
-            <Grid Margin="0, 5, 0, 5">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <StackPanel Orientation="Vertical" Grid.Column="0" HorizontalAlignment="Center">
+                <StackPanel Orientation="Vertical" Grid.Row="3">
                     <TextBlock Text="Тип оборудования" HorizontalAlignment="Center"/>
                     <TextBlock x:Name="tbTypeEquipment" MinWidth="300"/>
                 </StackPanel>
-                <StackPanel Orientation="Vertical" Grid.Column="1" HorizontalAlignment="Center">
-                    <TextBlock Text="Статус" HorizontalAlignment="Center"/>
-                    <ComboBox x:Name="cmbStatus" MinWidth="300" MaxWidth="300"/>
+
+            </Grid>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                </Grid.RowDefinitions>
+                <StackPanel Orientation="Vertical" Grid.Row="0" >
+                    <TextBlock Text="Услуга" HorizontalAlignment="Center"/>
+                    <ComboBox x:Name="cmbService" MinWidth="300" MaxWidth="300"/>
                 </StackPanel>
-                <StackPanel Orientation="Vertical" Grid.Column="2" HorizontalAlignment="Center">
-                    <TextBlock Text="Тип проблемы" HorizontalAlignment="Center"/>
+                <StackPanel Orientation="Vertical" Grid.Row="1" >
+                    <TextBlock Text="Вид услуги" HorizontalAlignment="Center"/>
+                    <ComboBox x:Name="cmbTypeOfService" MinWidth="300" SelectionChanged="cmbTypeOfService_SelectionChanged" MaxWidth="300"/>
+                </StackPanel>
+                <StackPanel Orientation="Vertical" Grid.Row="2" >
+                    <TextBlock Text="Тип услуги" HorizontalAlignment="Center"/>
+                    <ComboBox x:Name="cmbServiceType" MinWidth="300" MaxWidth="300"/>
+                </StackPanel>
+                
+                <StackPanel Orientation="Vertical" Grid.Row="3" >
+                    <TextBlock Text="Тип проблемы" />
                     <ComboBox x:Name="cmbProblemType" MinWidth="300" MaxWidth="300"/>
                 </StackPanel>
             </Grid>
-            <StackPanel Orientation="Horizontal" Margin="5">
-                <TextBlock Text="Дата закрытия: "/>
-                <DatePicker Name="dpEndDate"/>
-            </StackPanel>
-            <TextBlock Text="Описание:"/>
-            <TextBox x:Name="tbDescription" Height="80" AcceptsReturn="True" TextWrapping="Wrap"/>
-        </StackPanel>
+            <Grid Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="2*"/>
+                </Grid.RowDefinitions>
+                
+                <StackPanel  Grid.Row="0" Orientation="Vertical" Margin="5">
+                    <TextBlock Text="Дата закрытия: "/>
+                    <DatePicker Name="dpEndDate"/>
+                </StackPanel>
+                
+                <StackPanel Orientation="Vertical" Grid.Row="1" >
+                    <TextBlock Text="Статус" />
+                    <ComboBox x:Name="cmbStatus" MinWidth="300" MaxWidth="300"/>
+                </StackPanel>
+                
+                <StackPanel Grid.Row="2" Orientation="Vertical" Margin="5">
+                    <TextBlock Text="Описание:"/>
+                    <TextBox x:Name="tbDescription" Height="80" AcceptsReturn="True" TextWrapping="Wrap"/>
+                </StackPanel>
+            </Grid>
+        </Grid>
         <Grid Grid.Row="2">
             <Button x:Name="btnBack" Content="Назад" Height="50" Width="200" Margin="20, 0, 0, 0" Template="{StaticResource ResourceKey=CTButonMainPage}" Style="{StaticResource ResourceKey=BtnStyle}" HorizontalAlignment="Left" Click="btnBack_Click"/>
-            <Button x:Name="btnRequest" Content="Создать заявку" Height="50" Width="300" Template="{StaticResource ResourceKey=CTButonMainPage}" Style="{StaticResource ResourceKey=BtnStyle}" HorizontalAlignment="Center" Click="btnRequest_Click"/>
             <Button x:Name="btnCheck" Content="Тест" Height="50" Width="250" Margin="0, 0, 20, 0" Template="{StaticResource ResourceKey=CTButonMainPage}" Style="{StaticResource ResourceKey=BtnStyle}" HorizontalAlignment="Right" Click="btnCheck_Click"/>
+            <Button x:Name="btnRequest" Content="Создать заявку" Height="50" Width="300" Template="{StaticResource ResourceKey=CTButonMainPage}" Style="{StaticResource ResourceKey=BtnStyle}" HorizontalAlignment="Center" Click="btnRequest_Click"/>
         </Grid>
+
     </Grid>
 </Window>
